--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <title>Anna Ruth Maquiadora Profissional em Curitiba</title>
+  <title>Anna Ruth | Maquiadora Profissional</title>
   <meta name="description" content="maquiadora"> <!-- ALTERAR CONTENT -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,17 +35,15 @@
     </div>
     <div class="home">
       <div class="coluna-2">
-        <a href="https://www.instagram.com/annaruthmakeup/" target="_blank">
+        <a href="https://www.instagram.com/studioannaruth/" target="_blank">
           <img class="perfil" src="img/perfil-completo.png">
         </a>
       </div>
       <div class="coluna-1">
         <h2>QUEM SOU EU</h2>
-        <p class="sobre-mim">Lorem ipsum morbi primis libero porta 
-          porttitor interdum morbi curabitur fermentum 
-          semper ultricies, aliquam suscipit nisi malesuada 
-          suscipit praesent fermentum vivamus maecenas 
-          nisl volutpat interdum fringilla, tortor donec variusrat
+        <p class="sobre-mim">Olá, bem vindo (a) ao meu site, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. 
+          Minha motivação para trabalhar com maquiagem é realçar a beleza existente na mulher, de dentro para fora, evidenciando a sua beleza.
+          Ofereço serviços de maquiagem social e penteados, além de, pacotes especiais para debutantes e noivas.
         </p>
         <a href="https://api.whatsapp.com/send?phone=5541998118162&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." target="_blank">
           <button class="btn-contato">CONVERSAR NO WHATSAPP</button>
@@ -55,6 +53,29 @@
     <div class="portfolio">
       <h2>PORTFÓLIO</h2>
       <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
+    </div>
+    <div class="imagens-portfolio">
+
+    </div>
+    <div class="portfolio">
+      <h2>DEPOIMENTOS</h2>
+      <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
+    </div>
+    <div class="depoimentos">
+      <div class="depoimento1">
+        <img src="img/depoimentos/depoimento1.png" class="img-depoimento">
+      </div>
+      <div class="depoimento2">
+        <img src="img/depoimentos/depoimento2.png" class="img-depoimento">
+      </div>
+    </div>
+    <div class="depoimentos">
+      <div class="depoimento1">
+        <img src="img/depoimentos/depoimento3.png" class="img-depoimento">
+      </div>
+      <div class="depoimento2">
+        <img src="img/depoimentos/depoimento1.png" class="img-depoimento">
+      </div>
     </div>
   </main>
 </body>
