--- a/index.html
+++ b/index.html
@@ -77,6 +77,57 @@
         <img src="img/depoimentos/depoimento1.png" class="img-depoimento">
       </div>
     </div>
+    <div class="portfolio">
+      <h2>SERVIÇOS</h2>
+      <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
+    </div>
+    <div class="servicos">
+      <div class="servico1">
+        <h3>MAQUIAGEM SOCIAL</h3>
+        <p>Realço a sua beleza para você ir ainda mais
+          bela para o seu evento, seja ele um casamento, 
+          formatura, aniversário, aquele momento que 
+          você deseja eternizar somente com boas memórias.
+        </p>
+        <a href="https://api.whatsapp.com/send?phone=5541998118162&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." target="_blank">
+          <button class="btn-contato">SOLICITAR ORÇAMENTO</button>
+        </a> 
+      </div>
+      <div class="servico2">
+        <h3>DEBUTANTE</h3>
+        <p>Atendimento exclusivo para você que agora está 
+          se tornando uma mulher, comemorar seu dia com 
+          um atendimento exclusivo para você.          
+        </p>
+        <a href="https://api.whatsapp.com/send?phone=5541998118162&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." target="_blank">
+          <button class="btn-contato">SOLICITAR ORÇAMENTO</button>
+        </a>       
+      </div>
+    </div>
+    <div class="servicos">
+      <div class="servico3">
+        <h3>NOIVA</h3>
+        <p>Para o seu grande momento especial, 
+          nada melhor do que uma maquiadora para 
+          chamar de sua, atendimento exclusivo para que
+          tudo ocorra perfeito no seu grande dia.
+        </p>
+        <a href="https://api.whatsapp.com/send?phone=5541998118162&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." target="_blank">
+          <button class="btn-contato">SOLICITAR ORÇAMENTO</button>
+        </a> 
+      </div>
+      <div class="servico4">
+        <h3>PENTEADO</h3>
+        <p>Para você ir para a festa tranquila que seu 
+          cabelo estará perfeito em todos os momentos, 
+          um especialista em penteados irá te deixar ainda
+          mais maravilhosa.          
+        </p>
+        <a href="https://api.whatsapp.com/send?phone=5541998118162&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." target="_blank">
+          <button class="btn-contato">SOLICITAR ORÇAMENTO</button>
+        </a>       
+      </div>
+    </div>
   </main>
 </body>
 </html>
