--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h3>DEBUTANTE</h3>
         <p>Atendimento exclusivo para você que agora está 
           se tornando uma mulher, comemorar seu dia com 
-          um atendimento exclusivo para você.          
+          um atendimento exclusivo.          
         </p>
         <a href="https://api.whatsapp.com/send?phone=5541998118162&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." target="_blank">
           <button class="btn-contato">SOLICITAR ORÇAMENTO</button>
@@ -107,7 +107,7 @@
     <div class="servicos">
       <div class="servico3">
         <h3>NOIVA</h3>
-        <p>Para o seu grande momento especial, 
+        <p>Para o seu momento especial, 
           nada melhor do que uma maquiadora para 
           chamar de sua, atendimento exclusivo para que
           tudo ocorra perfeito no seu grande dia.
@@ -127,6 +127,10 @@
           <button class="btn-contato">SOLICITAR ORÇAMENTO</button>
         </a>       
       </div>
+    </div>
+    <div class="contato">
+      <h2>CONTATO</h2>
+      <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
     </div>
   </main>
 </body>
