--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
       <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
     </div>
     <div class="imagens-portfolio">
-
+      <img src="img/portfolio/portfolio-1.png">
+      <img src="img/portfolio/portfolio-2.png">
+    </div>
+    <div class="imagens-portfolio">
+      <img src="img/portfolio/portfolio-3.png">
+      <img src="img/portfolio/portfolio-4.png">
+    </div>
+    <div class="imagens-portfolio">
+      <img src="img/portfolio/portfolio-5.png">
     </div>
     <div class="portfolio">
       <h2>DEPOIMENTOS</h2>
@@ -74,7 +82,7 @@
         <img src="img/depoimentos/depoimento3.png" class="img-depoimento">
       </div>
       <div class="depoimento2">
-        <img src="img/depoimentos/depoimento1.png" class="img-depoimento">
+        <img src="img/depoimentos/depoimento4.png" class="img-depoimento">
       </div>
     </div>
     <div class="portfolio">
