--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Poppins:wght@700&family=Roboto:wght@100&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" type="image/png" href="img/batom.png"/>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,17 +20,17 @@
       </a>
       <nav arial-label="primaria">
         <ul class="header-menu">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="portfolio.html">PORTFÓLIO</a></li>
-          <li><a href="depoimentos.html">DEPOIMENTOS</a></li>
-          <li><a href="contato.html">CONTATO</a></li>
+          <li><a href="#home">HOME</a></li>
+          <li><a href="#portfolio">PORTFÓLIO</a></li>
+          <li><a href="#depoimentos">DEPOIMENTOS</a></li>
+          <li><a href="#contato">CONTATO</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main>
-    <div class="titulo">
+    <div class="titulo" id="home">
       <h1>Anna Ruth Maquiadora Profissional em Curitiba </h1>
       <img class="linha-img" src="img/linha-titulo.png">
     </div>
@@ -41,7 +42,7 @@
       </div>
       <div class="coluna-1">
         <h2>QUEM SOU EU</h2>
-        <p class="sobre-mim">Olá, bem vindo (a) ao meu site, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. 
+        <p class="sobre-mim">Olá, bem vindo(a) ao meu site, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. 
           Minha motivação para trabalhar com maquiagem é realçar a beleza existente na mulher, de dentro para fora, evidenciando a sua beleza.
           Ofereço serviços de maquiagem social e penteados, além de, pacotes especiais para debutantes e noivas.
         </p>
@@ -50,7 +51,7 @@
         </a>      
       </div>
     </div>
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
       <h2>PORTFÓLIO</h2>
       <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
     </div>
@@ -64,8 +65,9 @@
     </div>
     <div class="imagens-portfolio">
       <img src="img/portfolio/portfolio-5.png">
+      <img src="img/portfolio/portfolio-6.png">
     </div>
-    <div class="portfolio">
+    <div class="portfolio" id="depoimentos">
       <h2>DEPOIMENTOS</h2>
       <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
     </div>
@@ -85,7 +87,7 @@
         <img src="img/depoimentos/depoimento4.png" class="img-depoimento">
       </div>
     </div>
-    <div class="portfolio">
+    <div class="portfolio" id="servicos">
       <h2>SERVIÇOS</h2>
       <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
     </div>
@@ -136,7 +138,7 @@
         </a>       
       </div>
     </div>
-    <div class="contato">
+    <div class="contato" id="contato">
       <h2>CONTATO</h2>
       <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
     </div>
