--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- HTML Meta Tags -->
   <title>Anna Ruth | Maquiadora Profissional</title>
-  <meta name="description" content="maquiadora"> <!-- ALTERAR CONTENT -->
+  <meta name="description" content="Olá, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. Ofereço serviços de maquiagem social e penteados, além de, pacotes especiais para debutantes e noivas.">
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Anna Ruth | Maquiadora Profissional">
+  <meta itemprop="description" content="Olá, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. Ofereço serviços de maquiagem social e penteados, além de, pacotes especiais para debutantes e noivas.">
+  <meta itemprop="image" content="https://studioannaruth.com/img/perfil.jpg">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://studioannaruth.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Anna Ruth | Maquiadora Profissional">
+  <meta property="og:description" content="Olá, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. Ofereço serviços de maquiagem social e penteados, além de, pacotes especiais para debutantes e noivas.">
+  <meta property="og:image" content="https://studioannaruth.com/img/perfil.jpg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Anna Ruth | Maquiadora Profissional">
+  <meta name="twitter:description" content="Olá, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. Ofereço serviços de maquiagem social e penteados, além de, pacotes especiais para debutantes e noivas.">
+  <meta name="twitter:image" content="https://studioannaruth.com/img/perfil.jpg">
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
