--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Anna Ruth | Maquiadora Profissional">
   <meta itemprop="description" content="Olá, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. Ofereço serviços de maquiagem social e penteados, além de, pacotes especiais para debutantes e noivas.">
-  <meta itemprop="image" content="https://studioannaruth.com/img/perfil.jpg">
+  <meta itemprop="image" content="img/perfil.jpg">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://studioannaruth.com">
