--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
       <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
     </div>
     <div class="contatos-cont">
-      <a href="https://api.whatsapp.com/send?phone=5541998118162&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem.">
+      <a href="https://api.whatsapp.com/send?phone=5541998118162&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." target="_blank">
         <h3><img src="img/icons/whatsapp.png" class="img-wpp">41 99811-8162</h3>
       </a>
-      <a href="https://www.instagram.com/studioannaruth/">
+      <a href="https://www.instagram.com/studioannaruth/" target="_blank">
         <h3><img src="img/icons/instagram.png" class="img-wpp">studioannaruth</h3>
       </a>
     </div>
