--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <main>
     <div class="titulo" id="home">
-      <h1>Anna Ruth Maquiadora Profissional em Curitiba </h1>
+      <h1>Ann Ruth Maquiadora Profissional em Curitiba </h1>
       <img class="linha-img" src="img/linha-titulo.png">
     </div>
     <div class="home">
