--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <!-- HTML Meta Tags -->
-  <title>Anna Ruth | Maquiadora Profissional</title>
+  <title>Anna Ruth | Maquiadora Profissional em Curitiba</title>
   <meta name="description" content="Olá, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. Ofereço serviços de maquiagem social e penteados, além de, pacotes especiais para debutantes e noivas.">
 
   <!-- Google / Search Engine Tags -->
