--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" type="image/png" href="img/batom.png"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -168,6 +169,9 @@
       </a>
       <a href="https://www.instagram.com/studioannaruth/" target="_blank">
         <h3><img src="img/icons/instagram.png" class="img-wpp">studioannaruth</h3>
+      </a>
+      <a href="https://api.whatsapp.com/send?phone=5541999598483&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888; z-index:1000;" target="_blank">
+        <i style="margin-top:16px" class="fa fa-whatsapp"></i>
       </a>
     </div>
   </main>
