--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <!-- HTML Meta Tags -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PFD224Z0ZX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PFD224Z0ZX');
+  </script>
+  <!-- HTML Meta Tags -->
   <title>Anna Ruth | Maquiadora Profissional em Curitiba</title>
   <meta name="description" content="Olá, me chamo Anna Ruth, sou maquiadora profissional há mais de 5 anos. Ofereço serviços de maquiagem social e penteados, além de, pacotes especiais para debutantes e noivas.">
 
