--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
   <main>
     <div class="titulo" id="home">
       <h1>Anna Ruth Maquiadora Profissional em Curitiba </h1>
-      <img class="linha-img" src="img/linha-titulo.png">
+      <img class="linha-img" src="img/linha-titulo.png" alt="linha">
     </div>
     <div class="home">
       <div class="coluna-2">
         <a href="https://www.instagram.com/studioannaruth/" target="_blank">
-          <img class="perfil" src="img/perfil-completo.png">
+          <img class="perfil" src="img/perfil-completo.png" alt="Perfil">
         </a>
       </div>
       <div class="coluna-1">
@@ -83,43 +83,43 @@
     </div>
     <div class="portfolio" id="portfolio">
       <h2>PORTFÓLIO</h2>
-      <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
+      <img class="linha-img" src="img/portfolio/linhas-portfolio.png" alt="linha">
     </div>
     <div class="imagens-portfolio">
-      <img src="img/portfolio/portfolio-1.png">
-      <img src="img/portfolio/portfolio-2.png">
+      <img src="img/portfolio/portfolio-1.png" alt="Portfolio1">
+      <img src="img/portfolio/portfolio-2.png" alt="Portfolio2">
     </div>
     <div class="imagens-portfolio">
-      <img src="img/portfolio/portfolio-3.png">
-      <img src="img/portfolio/portfolio-4.png">
+      <img src="img/portfolio/portfolio-3.png" alt="Portfolio3">
+      <img src="img/portfolio/portfolio-4.png" alt="Portfolio4">
     </div>
     <div class="imagens-portfolio">
-      <img src="img/portfolio/portfolio-5.png">
-      <img src="img/portfolio/portfolio-6.png">
+      <img src="img/portfolio/portfolio-5.png" alt="Portfolio5">
+      <img src="img/portfolio/portfolio-6.png" alt="Portfolio6">
     </div>
     <div class="portfolio" id="depoimentos">
       <h2>DEPOIMENTOS</h2>
-      <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
+      <img class="linha-img" src="img/portfolio/linhas-portfolio.png" alt="linha">
     </div>
     <div class="depoimentos">
       <div class="depoimento1">
-        <img src="img/depoimentos/depoimento1.png" class="img-depoimento">
+        <img src="img/depoimentos/depoimento1.png" class="img-depoimento" alt="Depoimento1">
       </div>
       <div class="depoimento2">
-        <img src="img/depoimentos/depoimento2.png" class="img-depoimento">
+        <img src="img/depoimentos/depoimento2.png" class="img-depoimento" alt="Depoimento2">
       </div>
     </div>
     <div class="depoimentos">
       <div class="depoimento1">
-        <img src="img/depoimentos/depoimento3.png" class="img-depoimento">
+        <img src="img/depoimentos/depoimento3.png" class="img-depoimento" alt="Depoimento3">
       </div>
       <div class="depoimento2">
-        <img src="img/depoimentos/depoimento4.png" class="img-depoimento">
+        <img src="img/depoimentos/depoimento4.png" class="img-depoimento" alt="Depoimento4">
       </div>
     </div>
     <div class="portfolio" id="servicos">
       <h2>SERVIÇOS</h2>
-      <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
+      <img class="linha-img" src="img/portfolio/linhas-portfolio.png" alt="Linha">
     </div>
     <div class="servicos">
       <div class="servico1">
@@ -170,14 +170,14 @@
     </div>
     <div class="contato" id="contato">
       <h2>CONTATO</h2>
-      <img class="linha-img" src="img/portfolio/linhas-portfolio.png">
+      <img class="linha-img" src="img/portfolio/linhas-portfolio.png" alt="Linha">
     </div>
     <div class="contatos-cont">
       <a href="https://api.whatsapp.com/send?phone=5541999598483&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." target="_blank">
-        <h3><img src="img/icons/whatsapp.png" class="img-wpp">41 99959-8483</h3>
+        <h3><img src="img/icons/whatsapp.png" class="img-wpp" alt="WhatsApp">41 99959-8483</h3>
       </a>
       <a href="https://www.instagram.com/studioannaruth/" target="_blank">
-        <h3><img src="img/icons/instagram.png" class="img-wpp">studioannaruth</h3>
+        <h3><img src="img/icons/instagram.png" class="img-wpp" alt="Instagram">studioannaruth</h3>
       </a>
       <a href="https://api.whatsapp.com/send?phone=5541999598483&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20para%20maquiagem." style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888; z-index:1000;" target="_blank">
         <i style="margin-top:16px" class="fa fa-whatsapp"></i>
